<resources>
    <string name="app_name">NoamsWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">"Noam's Way"</string>
    <string name="nav_header_subtitle">https://nofarron161.wixsite.com/website</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_login">Login</string>
    <string name="menu_my_posts">"My Posts"</string>
    <string name="menu_my_profile">"My Profile"</string>
    <string name="menu_contact_us">"Contact Us"</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
