<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/menu_contact_us" />
    </group>
    <group
        android:id="@+id/not_login_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/user_profile_icon"
            android:title="@string/menu_login" />
    </group>
    <group
        android:id="@+id/logedin_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_posts"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_my_posts" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/user_profile_icon"
            android:title="@string/menu_my_profile" />
    </group>
</menu>
