<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noamsway.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.noamsway.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.noamsway.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_nav_category_to_postListFragment"
            app:destination="@id/postListFragment"
            app:popUpTo="@id/nav_category"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.noamsway.ui.auth.SignInFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/postListFragment"
        android:name="com.example.noamsway.ui.postList.postListFragment"
        android:label="post_list_fragment"
        tools:layout="@layout/post_list_fragment" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.noamsway.ui.ContactUsFragment"
        android:label="contact_us_fragment"
        tools:layout="@layout/contact_us_fragment" />
</navigation>